Thread writing for the asset and data generators